feat: nutrient estimation